Improved login images container to avoid global layout overflow

--- a/web/org.openbravo.retail.posterminal/css/login.css
+++ b/web/org.openbravo.retail.posterminal/css/login.css
@@ -22,7 +22,7 @@
     }
 
     div.login-user-container {
-      height: 79%;
+      height: 475px;
       overflow: auto;
     }
 
